[package]
name = "cgmath_dolly"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Composable camera rigs but this time using CGMATH"
repository = "https://github.com/TuckerBMorgan/cgmath_dolly"
keywords = ["gamedev", "camera", "3d", "cgmath"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "*"

[dev-dependencies]
macroquad = "0.3"
glam = ">=0.15, <=0.20"